# rust-nn

./: .gitignore  Cargo.toml
src/: layer.rs  main.rs  model.rs  optimizer.rs  utils.rs
