[package]
name = "rust-nn"
version = "0.1.0"
authors = ["Naoki Matsumoto <m.naoki9911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mnist = "0.4.0"
ndarray = { version = "0.13.0" , features = ["blas"] }
rand = "0.7.0"
ndarray-rand = "0.11.0"
blas-src = { version = "0.2.0", default-features = false, features = ["intel-mkl"] }
ndarray-stats = "0.3.0"
ansi_term = "0.12"